# advent-of-code-rust-2024

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: readme-stars.yml
data/examples/: 03-2.txt  04-1.txt  04.txt  07.txt  08-3.txt
src/: advent_util.rs  lib.rs
src/template/commands/: scaffold.rs
