[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
priority-queue = "1.3.2"
cached = "0.46.1"
pico-args = "0.5.0"
regex = "1.10.2"
num = { version = "0.4.3", features = [] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.5"
serde_json = "1.0.121"
serde = { version= "1.0.204", features = ["derive"] }
futures = "0.3.31"